# AIDRIN

./: README.md  aidrin_report.html  aidrin_report.json  pyproject.toml  test_data.h5
aidrin/: __init__.py  cli.py  core.py
aidrin/ingestors/: __init__.py  base.py  custom_ingestor.py  hdf5_ingestor.py  root_ingestor.py  zarr_ingestor.py
aidrin/intelligence/: __init__.py  llm_profiler.py  pii_detector.py
aidrin/metrics/: __init__.py  ai_readiness.py  fair.py  traditional.py
aidrin/report/: html.py  streamlit_app.py
tests/: generate_test_data.py  test_compliance.py
