[project]
name = "aidrin"
version = "0.1.0"
description = "AI Data Readiness INspector"
authors = [
    { name = "AIDRIN Team", email = "team@aidrin.org" }
]
dependencies = [
    "polars>=1.0.0",
    "h5py>=3.11.0",
    "zarr>=2.18.0",
    "uproot>=5.3.0",
    "fairlearn>=0.10.0",
    "scikit-learn>=1.5.0",
    "plotly>=5.22.0",
    "jinja2>=3.1.4",
    "streamlit>=1.35.0",
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",
    "openai>=1.30.0",
    "scipy>=1.13.1"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aidrin = "aidrin.cli:main"
